# self-learning-model

./: .gitignore  README.md  pyproject.toml  run_llm.py
docs/: architecture.md
results/: session_20250214_134002.json
src/: cli.py
src/common/: session.py  types.py
src/models/: llm.py
src/student/: evaluator.py  solver.py  trainer.py
src/teacher/: gt_problem_gen.py  nl_question_gen.py  problem_gen.py
tests/: test_session.py
tests/test_models/: test_llm.py
tests/test_student/: test_solver.py
tests/test_teacher/: test_problem_gen.py
