[project]
name = "self-learning-model"
version = "0.1.0"
description = "A Teacher-Student Framework for Autonomous Learning"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "gymnasium",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest-cov",
    "ipykernel",
]

[project.scripts]
learn = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
