[project]
name = "self-learning-model"
version = "0.1.0"
description = "A Teacher-Student Framework for Autonomous Learning"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "numpy",
    "torch",
    "transformers",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "ipykernel",
]

[project.scripts]
learn = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
